# cinematch

./: LICENSE  README.md
.github/: FUNDING.yml
backend/: main.py  pyproject.toml  ruff.toml
backend/tests/: test_main.py
docs/: develop.md
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  router.js
frontend/src/components/: MovieCard.vue  Notifications.vue
frontend/src/views/: DashboardView.vue  LoginView.vue
